# tuplex

./: .gitignore  .pre-commit-config.yaml  02_Working_with_files.ipynb  Demo_notebook.ipynb  DevNotebook.ipynb  FlightExp.ipynb  LambdaTesting.ipynb  LambdaTesting_Experimental.ipynb  LoggingTest.ipynb  MANIFEST.in  ModuleTest.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Verify_number_of_columns.ipynb  azure-pipelines.yml  create-and-deploy-json-lambda.sh  credentials_check.ipynb  delete-logs.py  deploy.py  original_request.json  pyproject.toml  python_code_pipeline_stage_0.py  request_0.json  ruff.toml  setup.py  upload_lambda.py
experimental/s3speed/: CMakeLists.txt  main.cc  md5.cc
experimental/s3speed/lyra/: arg.hpp  arguments.hpp  cli.hpp  cli_parser.hpp  command.hpp  exe_name.hpp  group.hpp  help.hpp  literal.hpp  main.hpp  opt.hpp  parser.hpp  parser_result.hpp  val.hpp
tuplex/: .gitignore  CMakeLists.txt  Notes.txt  compile-exp.sh  vcpkg.json  zip_cc_runtime.py
tuplex/adapters/: CMakeLists.txt
tuplex/adapters/cpython/: CMakeLists.txt
tuplex/awslambda/: .gitignore  CMakeLists.txt  README.md
tuplex/awslambda/src/: backward.h  lambda_main.cc  logsink.h  main.cc  main.h  sighandler.cc  sighandler.h
tuplex/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  FindANTLR4Runtime.cmake  FindCELERO.cmake  FindCURL.cmake  FindFFI.cmake  FindLLVM.cmake  FindLibDwarf.cmake  FindLibElf.cmake  FindLibMagic.cmake  FindPythonInterpreter.cmake  FindSIMD.cmake  FindSSE.cmake  FindSnappy.cmake  FindYAMLCPP.cmake  Findpcre2.cmake  Findzstd.cmake  targetLinkLibrariesWithDynamicLookup.cmake  ucm.cmake  vcpkg.cmake
tuplex/codegen/: .gitignore  CMakeLists.txt  LegalPython3Statements.txt
tuplex/codegen/grammar/: Python3.g4
tuplex/codegen/include/: ASTAnnotation.h  ASTHelpers.h  ASTNodes.h  AnnotatedAST.h  ApplyVisitor.h  BlockGeneratorVisitor.h  BuiltinDictProxy.h  BuiltinDictProxyImpl.h  CleanAstVisitor.h  ClosureEnvironment.h  CodegenHelper.h  CompiledFunction.h  FlattenedTuple.h  FunctionRegistry.h  HashHelper.h  IFailable.h  IPrePostVisitor.h  IReplaceVisitor.h  IVisitor.h  InstructionCountPass.h  IteratorContextProxy.h  LLVMEnvironment.h  LLVMIntrinsics.h  LambdaFunction.h  Pipe.h  ReducableExpressionsVisitor.h  ReduceExpressionsVisitor.h  RemoveDeadBranchesVisitor.h  ReplaceConstantTypesVisitor.h  StandardModules.h  SymbolTable.h  Token.h  TokenType.h  TypeAnnotatorVisitor.h  UnrollLoopsVisitor.h  cJSONDictProxyImpl.h
tuplex/codegen/src/: ASTHelpers.cc  ASTNodes.cc  AnnotatedAST.cc  ApatheticVisitor.cc  BlockGeneratorVisitor.cc  CleanAstVisitor.cc  ClosureEnvironment.cc  CodegenHelper.cc  CompiledFunction.cc  FlattenedTuple.cc  FunctionRegistry.cc  HashHelper.cc  IFailable.cc  IReplaceVisitor.cc  IVisitor.cc  IteratorContextProxy.cc  LLVMEnvironment.cc  LambdaFunction.cc  Pipe.cc  ReducableExpressionsVisitor.cc  ReduceExpressionsVisitor.cc  RemoveDeadBranchesVisitor.cc  ReplaceConstantTypesVisitor.cc  StandardModules.cc  SymbolTable.cc  Token.cc  TypeAnnotatorVisitor.cc  UnrollLoopsVisitor.cc  VariableFinderVisitor.cc  cJSONDictProxyImpl.cc
tuplex/codegen/tools/: .gitignore
tuplex/core/: CMakeLists.txt  README.md
tuplex/core/include/: AccessPathVisitor.h  ColumnReturnRewriteVisitor.h  ColumnRewriteVisitor.h  Context.h  ContextOptions.h  ContextStatistics.h  DataSet.h  Defs.h  EmptyDataset.h  ErrorDataSet.h  ExceptionInfo.h  Executor.h  FilterBreakdownVisitor.h  FixedRTDyldObjectLinkingLayer_llvm9.h  HistoryServerConnector.h  HybridHashTable.h  IJITCompiler.h  IncrementalCache.h  JITCompiler.h  JITCompiler_llvm13.h  JobMetrics.h  LocalEngine.h  Partition.h  PartitionGroup.h  PartitionUtils.h  PartitionWriter.h  RESTInterface.h  RuntimeInterface.h  Signals.h  SortBy.h  TSingleton.h  TraceVisitor.h  TransformStageExceptionReservoir.h  UDF.h
tuplex/core/proto/: Lambda.proto
tuplex/core/src/: AccessPathVisitor.cc  ColumnReturnRewriteVisitor.cc  ColumnRewriteVisitor.cc  Context.cc  ContextOptions.cc  DataSet.cc  EmptyDataset.cc  Environment.cc  ErrorDataSet.cc  Executor.cc  FilterBreakdownVisitor.cc  HistoryServerConnector.cc  HybridHashTable.cc  IncrementalCache.cc  JITCompiler.cc  JITCompiler_llvm9.cc  LocalEngine.cc  Partition.cc  PartitionUtils.cc  PartitionWriter.cc  RESTInterface.cc  RuntimeInterface.cc  Signals.cc  TraceVisitor.cc  TransformStageExceptionReservoir.cc  UDF.cc  cJSONDictProxyImpl.cc
tuplex/historyserver/: .gitignore  MANIFEST.in  README.md  requirements.txt  run-dev.py  setup.py  start-mongodb.sh
tuplex/historyserver/thserver/: __init__.py  common.py  config.py  database.py  rest.py  version.py  views.py
tuplex/io/: CMakeLists.txt
tuplex/io/include/: AWSCommon.h  FileHelperUtils.h  FilePart.h  FileUtils.h  IFileSystemImpl.h  MimeType.h  PosixFileSystemImpl.h  S3Cache.h  S3File.h  S3FileSystemImpl.h  URI.h  VirtualFile.h  VirtualFileSystem.h  VirtualFileSystemBase.h  VirtualMappedFile.h
tuplex/io/patches/: snappy.diff
tuplex/io/src/: AWSCommon.cc  FilePart.cc  IFileSystemImpl.cc  OrcTypes.cc  PosixFileSystemImpl.cc  S3Cache.cc  S3File.cc  S3FileSystemImpl.cc  URI.cc  VirtualFileSystem.cc
tuplex/python/: CMakeLists.txt  MANIFEST.in  PythonBindings.md  mongodb_test.py  requirements.txt  setup.py  zip_cc_runtime.py
tuplex/python/include/: PythonCommon.h  PythonContext.h  PythonDataSet.h  PythonException.h  PythonMetrics.h  PythonWrappers.h  python3_sink.h
tuplex/python/src/: PythonBindings.cc  PythonCommon.cc  PythonContext.cc  PythonDataSet.cc  PythonException.cc  PythonWrappers.cc
tuplex/python/tests/: .gitignore  helper.py  notebook_utils.py  test_aggregates.py  test_arithmetic.py  test_closure.py  test_columns.py  test_config.py  test_csv.py  test_dictionaries.py  test_exceptions.py  test_fallback.py  test_filter.py  test_import.py  test_index.py  test_inspect.py  test_is.py  test_lists.py  test_logical.py  test_math.py  test_metrics.py  (+11 more)
tuplex/runtime/: CMakeLists.txt
tuplex/test/: CMakeLists.txt  CMakeLists.txt.in
tuplex/utils/: CMakeLists.txt
tuplex/worker/: CMakeLists.txt  README.md
(+5539 files in other folders)
