[build-system]
requires = [
    "setuptools>=42",
    "pip>9",
    "wheel",
    "cloudpickle",
    "numpy",
    "ninja; sys_platform != 'win32'",
    "cmake>=3.25",
    "delocate; sys.platform == 'darwin'",
    "auditwheel; sys.platform == 'linux'",
    "requests"
]
build-backend = "setuptools.build_meta"


[tool.ruff]
include = ["pyproject.toml", "tuplex/python/tuplex/**/*.py"]
